src/test/fail/duplicate_classes.j
class Main {
    Void main() {
        return;
    }
}

class A {}

class A {}
